--- a/lib/sikchess/sikchess.css
+++ b/lib/sikchess/sikchess.css
@@ -96,9 +96,70 @@
 }
 
 .chess-board .board-tile.bg-w {
-    background: rgb(161, 159, 159);
+    background: rgb(161, 161, 161);
 }
 
 .chess-board .board-tile.bg-b {
-    background: rgb(95, 95, 95);
+    background: rgb(110, 110, 110);
+}
+
+.chess-board .chess-piece {
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    cursor: grab;
+}
+
+.chess-board .chess-piece:active {
+    cursor: grabbing;
+}
+
+.chess-board .chess-piece.piece-wk {
+    background-image: url("wk.svg");
+}
+
+.chess-board .chess-piece.piece-wq {
+    background-image: url("wq.svg");
+}
+
+.chess-board .chess-piece.piece-wb {
+    background-image: url("wb.svg");
+}
+
+.chess-board .chess-piece.piece-wn {
+    background-image: url("wn.svg");
+}
+
+.chess-board .chess-piece.piece-wr {
+    background-image: url("wr.svg");
+}
+
+.chess-board .chess-piece.piece-wp {
+    background-image: url("wp.svg");
+}
+
+.chess-board .chess-piece.piece-bk {
+    background-image: url("bk.svg");
+}
+
+.chess-board .chess-piece.piece-bq {
+    background-image: url("bq.svg");
+}
+
+.chess-board .chess-piece.piece-bb {
+    background-image: url("bb.svg");
+}
+
+.chess-board .chess-piece.piece-bn {
+    background-image: url("bn.svg");
+}
+
+.chess-board .chess-piece.piece-br {
+    background-image: url("br.svg");
+}
+
+.chess-board .chess-piece.piece-bp {
+    background-image: url("bp.svg");
 }
